--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "## Bonus Challenge 1 - Adjust Data Distribution\n",
     "\n",
-    "If you used the correct method in the previous step, you should have found the data distribution is skewed to the left. In order to improve your data visualization in the next steps, you can opt to adjust the `SalePrice` column by applying a mathematical function to the values. The goal is to produce a bell-shape normal distribution after applying the mathematical function to the sale price.\n",
+    "If you used the correct method in the previous step, you should have found the data distribution is skewed to the right. In order to improve your data visualization in the next steps, you can opt to adjust the `SalePrice` column by applying a mathematical function to the values. The goal is to produce a bell-shape normal distribution after applying the mathematical function to the sale price.\n",
     "\n",
     "*This technique is optional in data visualization but you'll find it useful in your future machine learning analysis.*\n",
     "\n",
@@ -497,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
